fix: update CSS to remove overflow and enhance layout; add download functionality in untis_init view

--- a/modules/homework/public/homework.css
+++ b/modules/homework/public/homework.css
@@ -88,7 +88,6 @@
     font-size: 1em;
     resize: none;
     height: 40px;
-    overflow: hidden;
     width: 100%;
 }
 
@@ -154,7 +153,6 @@
     border-radius: 8px;
     background-color: #fff;
     padding-top: 15px;
-    overflow: hidden;
 }
 
 .taskElement .header {
